--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 bg-base-200 z-10">
+<nav class="sticky top-0 bg-base-100 z-10">
   <div class="mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
@@ -15,28 +15,31 @@
             >
             <a
               href="/marketplace"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
+              class="dark:hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >MarketPlace</a
             >
             <a
-              href="#"
+              href="/profile"
               class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >Dashboard</a
             >
             <a
-              href="#"
+              href="/product"
               class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >About</a
             >
             <a
-              href="#"
+              href="/order"
               class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >Services</a
+            ><a
+              href="/orderDetails"
+              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
+              >orderDetails</a
             >
           </div>
         </div>
       </div>
-      <!-- Login & Sign-up buttons -->
       <div class="flex items-center">
         <div class="hidden md:flex md:gap-2 md:ml-4">
           <label class="swap swap-rotate">
@@ -62,7 +65,7 @@
           </label>
           <div class="indicator mt-1">
             <span class="indicator-item badge badge-xs badge-secondary">1</span>
-            <button class="btn btn-xs">
+            <a class="btn btn-xs" href="/cart">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-6 w-5"
@@ -77,7 +80,7 @@
                   d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                 />
               </svg>
-            </button>
+            </a>
           </div>
           <a
             href="#"
