--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -1,1 +1,122 @@
-<p>cart works!</p>
+<div
+  class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8 md:flex flex-col md:flex-row gap-6 min-h-[37rem]"
+>
+  <div class="w-full md:w-2/3 p-2 flex flex-col gap-2">
+    <div>
+      <div class="text-2xl">Shopping Bag</div>
+      <div>2 items in your bag</div>
+    </div>
+
+    <div class="overflow-x-auto mt-4">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Product Name</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (product of products; track product){
+
+          <tr>
+            <td>
+              <div class="flex items-center gap-3">
+                <div class="avatar">
+                  <div class="mask mask-squircle w-12 h-12">
+                    <img
+                      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+                      alt="Avatar Tailwind CSS Component"
+                    />
+                  </div>
+                </div>
+                <div>
+                  <div class="font-bold">Nike Carboon</div>
+                  <div class="text-sm opacity-50">Shoes</div>
+                </div>
+              </div>
+            </td>
+            <td>Zemlak, Daniel and Leannon Desktop Support Technician</td>
+            <td>210$</td>
+            <td>
+              <div class="flex items-center gap-1">
+                <button
+                  class="btn btn-circle btn-xs"
+                  (click)="decreaseQuantity(product.id)"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M18 12H6"
+                    />
+                  </svg>
+                </button>
+                <input
+                  type="text"
+                  class="input input-bordered w-12 text-center input-sm"
+                  [(ngModel)]="product.quantity"
+                />
+
+                <button
+                  class="btn btn-circle btn-xs"
+                  (click)="increaseQuantity(product.id)"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 6v12m6-6H6"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </td>
+            <th>
+              <button class="btn btn-ghost btn-xs text-red-400">Remove</button>
+            </th>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div
+    class="w-full md:w-1/3 min-h-40 h-max border dark:border-gray-700 rounded-lg p-4 flex flex-col gap-2"
+  >
+    <div class="text-2xl mb-4 text-content">Cart Total</div>
+    <div class="flex justify-between">
+      <div>Cart Subtotal</div>
+      <div class="font-bold">$7.50</div>
+    </div>
+    <div class="flex justify-between">
+      <div>Discount</div>
+      <div class="font-bold">$7.50</div>
+    </div>
+    <div class="flex justify-between">
+      <div>Delivery</div>
+      <div class="font-bold">$7.50</div>
+    </div>
+    <div class="flex justify-between">
+      <div class="font-bold text-lg">Cart Total</div>
+      <div class="font-bold">$17.50</div>
+    </div>
+    <button class="btn btn-primary btn-sm my-4">Apply</button>
+  </div>
+</div>
