--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -117,6 +117,6 @@
       <div class="font-bold text-lg">Cart Total</div>
       <div class="font-bold">$17.50</div>
     </div>
-    <button class="btn btn-primary btn-sm my-4">Apply</button>
+    <button class="btn btn-primary mt-4">Apply</button>
   </div>
 </div>
