--- a/src/app/Pages/profile-page/profile-page.component.html
+++ b/src/app/Pages/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8 min-h-[37rem]">
   <div class="w-full p-2 flex flex-col gap-4">
     <!-- Profile Information -->
-    <div class="shadow-lg rounded-lg p-6">
+    <div class="rounded-lg p-6">
       <div class="flex justify-between items-center mb-4">
         <div class="text-2xl font-bold">Profile Information</div>
         <button class="btn btn-sm btn-outline" (click)="editProfile()">
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Order History -->
-    <div class="shadow-lg rounded-lg p-6 mt-6">
+    <div class="rounded-lg p-6">
       <div class="text-2xl font-bold mb-4">Order History</div>
       <div class="overflow-x-auto">
         <table class="table w-full">
