adding the lis tproducts without any filter ( yet )

--- a/src/app/BackOfficePages/add-product/add-product.component.html
+++ b/src/app/BackOfficePages/add-product/add-product.component.html
@@ -11,6 +11,7 @@
         type="text"
         id="name"
         class="input input-bordered w-full"
+        placeholder="Enter product name"
         ngModel
         name="name"
         required
@@ -23,6 +24,7 @@
       <textarea
         id="description"
         class="textarea textarea-bordered w-full"
+        placeholder="Enter product description"
         ngModel
         name="description"
         required
@@ -35,6 +37,7 @@
       <textarea
         id="shortDescription"
         class="textarea textarea-bordered w-full"
+        placeholder="Enter short description"
         ngModel
         name="shortDescription"
         required
@@ -46,6 +49,7 @@
         type="number"
         id="price"
         class="input input-bordered w-full"
+        placeholder="Enter price"
         ngModel
         name="price"
         required
@@ -57,6 +61,7 @@
         type="number"
         id="stock"
         class="input input-bordered w-full"
+        placeholder="Enter stock"
         ngModel
         name="stock"
         required
@@ -68,6 +73,7 @@
         type="text"
         id="category"
         class="input input-bordered w-full"
+        placeholder="Enter category"
         ngModel
         name="category"
         required
@@ -79,6 +85,7 @@
         type="url"
         id="imageUrl"
         class="input input-bordered w-full"
+        placeholder="Enter image URL"
         ngModel
         name="imageUrl"
         required
