--- a/src/app/BackOfficePages/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
           <img class="h-6 w-auto" src="../../../assets/X-line.png" />
         </a> -->
 
-        <a routerLink="/dashboard" class="btn btn-ghost btn-sm w-full">
+        <a routerLink="/" class="btn btn-ghost btn-sm w-full">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-6 w-6"
@@ -24,10 +24,7 @@
         </a>
       </li>
       <li>
-        <a
-          routerLink="/dashboard/add-category"
-          class="btn btn-ghost btn-sm w-full"
-        >
+        <a routerLink="/add-product" class="btn btn-ghost btn-sm w-full">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="h-6 w-6"
