--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -38,6 +38,11 @@
               class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >orderDetails</a
             >
+            <a
+              href="/dashboard"
+              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
+              >Dashboard</a
+            >
           </div>
         </div>
       </div>
