--- a/src/app/Auth/sign-up/sign-up.component.html
+++ b/src/app/Auth/sign-up/sign-up.component.html
@@ -8,7 +8,11 @@
       </p>
     </div>
     <div class="card w-full max-w-md lg:w-1/2">
-      <form class="card-body">
+      <form
+        #signUpForm="ngForm"
+        (ngSubmit)="signUp(signUpForm)"
+        class="card-body"
+      >
         <div class="form-control">
           <label class="label">
             <span class="label-text">Full Name</span>
@@ -18,6 +22,9 @@
             placeholder="Enter your full name"
             class="input input-bordered"
             required
+            id="Username"
+            name="Username"
+            ngModel
           />
         </div>
         <div class="form-control mt-4">
@@ -29,6 +36,9 @@
             placeholder="Enter your email"
             class="input input-bordered"
             required
+            id="Email"
+            name="Email"
+            ngModel
           />
         </div>
         <div class="form-control mt-4">
@@ -40,10 +50,13 @@
             placeholder="Enter your password"
             class="input input-bordered"
             required
+            id="Password"
+            name="Password"
+            ngModel
           />
         </div>
         <div class="form-control mt-6">
-          <button class="btn btn-primary w-full">Sign Up</button>
+          <button type="submit" class="btn btn-primary w-full">Sign Up</button>
         </div>
         <div class="form-control mt-4 text-center">
           <span class="label-text">Already have an account?</span>
