--- a/src/app/Pages/cart/cart.component.html
+++ b/src/app/Pages/cart/cart.component.html
@@ -4,23 +4,31 @@
   <div class="w-full md:w-2/3 p-2 flex flex-col gap-2">
     <div>
       <div class="text-2xl">Shopping Bag</div>
-      <div>2 items in your bag</div>
+      <div>{{ cartService.cartItems.length }} items in your bag</div>
+      @if(cartService.cartItems.length !== 0 ){
+      <button class="btn btn-ghost btn-xs text-red-400" (click)="clearCart()">
+        Clear Cart
+      </button>
+      }
     </div>
 
     <div class="overflow-x-auto mt-4">
+      @if (cartService.cartItems.length === 0) {
+      <div class="text-center text-lg">Your cart is empty.</div>
+      } @else {
       <table class="table">
         <thead>
           <tr>
             <th>Product Name</th>
             <th>Description</th>
             <th>Price</th>
+            <th>Quantity</th>
             <th></th>
             <th></th>
           </tr>
         </thead>
         <tbody>
-          @for (product of products; track product){
-
+          @for (item of cartService.cartItems; track item) {
           <tr>
             <td>
               <div class="flex items-center gap-3">
@@ -28,23 +36,25 @@
                   <div class="mask mask-squircle w-12 h-12">
                     <img
                       src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                      alt="Avatar Tailwind CSS Component"
+                      alt="Product Image"
                     />
                   </div>
                 </div>
                 <div>
-                  <div class="font-bold">Nike Carboon</div>
-                  <div class="text-sm opacity-50">Shoes</div>
+                  <div class="font-bold">{{ item.product.name }}</div>
+                  <div class="text-sm opacity-50">
+                    {{ item.product.category }}
+                  </div>
                 </div>
               </div>
             </td>
-            <td>Zemlak, Daniel and Leannon Desktop Support Technician</td>
-            <td>210$</td>
+            <td>{{ item.product.description }}</td>
+            <td>{{ item.product.price }} Dt</td>
             <td>
               <div class="flex items-center gap-1">
                 <button
                   class="btn btn-circle btn-xs"
-                  (click)="decreaseQuantity(product.id)"
+                  (click)="decreaseQuantity(item.product.id)"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -64,12 +74,11 @@
                 <input
                   type="text"
                   class="input input-bordered w-12 text-center input-sm"
-                  [(ngModel)]="product.quantity"
+                  [(ngModel)]="item.quantity"
                 />
-
                 <button
                   class="btn btn-circle btn-xs"
-                  (click)="increaseQuantity(product.id)"
+                  (click)="increaseQuantity(item.product.id)"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -89,12 +98,18 @@
               </div>
             </td>
             <th>
-              <button class="btn btn-ghost btn-xs text-red-400">Remove</button>
+              <button
+                class="btn btn-ghost btn-xs text-red-400"
+                (click)="removeItem(item.product.id)"
+              >
+                Remove
+              </button>
             </th>
           </tr>
           }
         </tbody>
       </table>
+      }
     </div>
   </div>
   <div
@@ -103,20 +118,20 @@
     <div class="text-2xl mb-4 text-content">Cart Total</div>
     <div class="flex justify-between">
       <div>Cart Subtotal</div>
-      <div class="font-bold">$7.50</div>
+      <div class="font-bold">$0</div>
     </div>
     <div class="flex justify-between">
       <div>Discount</div>
-      <div class="font-bold">$7.50</div>
+      <div class="font-bold">$0</div>
     </div>
     <div class="flex justify-between">
       <div>Delivery</div>
-      <div class="font-bold">$7.50</div>
+      <div class="font-bold">$0</div>
     </div>
     <div class="flex justify-between">
-      <div class="font-bold text-lg">Cart Total</div>
-      <div class="font-bold">$17.50</div>
+      <div>Cart Total</div>
+      <div class="font-bold">{{ getCartTotal() }} Dt</div>
     </div>
-    <button class="btn btn-primary mt-4">Apply</button>
+    <button class="btn btn-primary mt-4" routerLink="/order">Make Order</button>
   </div>
 </div>
