--- a/src/app/Pages/order/order.component.html
+++ b/src/app/Pages/order/order.component.html
@@ -7,6 +7,35 @@
       <div>Please fill in the form to complete your order.</div>
     </div>
 
+    <!-- Cart Items Section -->
+    <div class="mt-4 px-2 py-4">
+      <div class="text-xl">Cart Items</div>
+      <table class="table mt-2">
+        <thead>
+          <tr>
+            <th>Product Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Subtotal</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for ( item of cartItems ;track item){
+          <tr>
+            <td>{{ item.product.name }}</td>
+            <td>{{ item.product.price }} Dt</td>
+            <td>{{ item.quantity }}</td>
+            <td>{{ item.product.price * item.quantity }} Dt</td>
+          </tr>
+          }
+        </tbody>
+      </table>
+      <div class="flex justify-center mt-4 font-bold text-xl">
+        Total: {{ cartTotal }} Dt
+      </div>
+    </div>
+
+    <!-- Order Form -->
     <form #orderForm="ngForm" (ngSubmit)="submitOrder(orderForm)">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div>
@@ -86,14 +115,6 @@
             required
             placeholder="Enter your postal code"
           />
-        </div>
-      </div>
-      <div class="mt-4">
-        <div class="w-max h-max py-4 flex flex-col gap-4">
-          <div class="flex gap-4 items-end font-bold text-xl">
-            <div>Total :</div>
-            <div class="text-lg">$500.5</div>
-          </div>
         </div>
       </div>
       <button class="btn btn-primary mt-4 w-full" type="submit">Apply</button>
