--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="card w-full max-w-md lg:w-1/2">
       <div class="card-body">
-        <form>
+        <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
           <div class="form-control">
             <label class="label">
               <span class="label-text">Email</span>
@@ -19,6 +19,9 @@
               placeholder="Enter your email"
               class="input input-bordered"
               required
+              id="Email"
+              name="Email"
+              ngModel
             />
           </div>
           <div class="form-control mt-4">
@@ -30,6 +33,9 @@
               placeholder="Enter your password"
               class="input input-bordered"
               required
+              id="Password"
+              name="Password"
+              ngModel
             />
             <label class="label">
               <a href="#" class="label-text-alt link link-hover text-primary"
@@ -38,13 +44,11 @@
             </label>
           </div>
           <div class="form-control mt-6">
-            <button class="btn btn-primary w-full">Login</button>
+            <button type="submit" class="btn btn-primary w-full">Login</button>
           </div>
         </form>
         <div class="form-control mt-6">
-          <button class="btn btn-accent w-full" (click)="handleAuthClick()">
-            Google
-          </button>
+          <button class="btn btn-accent w-full">Google</button>
         </div>
         <div class="form-control mt-4 text-center">
           <span class="label-text">Don't have an account?</span>
