adding the order / orderdetails F/B

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -100,9 +100,11 @@
                 <img class="h-5 w-auto" src="../../assets/squi-arrow.png" />
               </div>
               <div class="ml-3">
-                <div class="text-base font-medium leading-none">User</div>
+                <div class="text-base font-medium leading-none">
+                  {{ userData.userName }}
+                </div>
                 <div class="text-sm font-medium leading-none text-gray-400">
-                  usersxample.com
+                  {{ userData.userEmail }}
                 </div>
               </div>
             </div>
