--- a/src/app/Pages/order-details/order-details.component.html
+++ b/src/app/Pages/order-details/order-details.component.html
@@ -10,27 +10,27 @@
           <label class="label">
             <span class="label-text font-bold">Order ID:</span>
           </label>
-          <div class="text-lg">#1234</div>
+          <div class="text-lg">#{{ order.id }}</div>
         </div>
         <div>
           <label class="label">
             <span class="label-text font-bold">Date:</span>
           </label>
-          <div class="text-lg">2024-05-10</div>
+          <div class="text-lg">{{ order.date | date : "yyyy-MM-dd" }}</div>
         </div>
         <div>
           <label class="label">
             <span class="label-text font-bold">Status:</span>
           </label>
           <div class="text-lg">
-            <span class="badge badge-success">Shipped</span>
+            <span class="badge badge-success">{{ order.status }}</span>
           </div>
         </div>
         <div>
           <label class="label">
             <span class="label-text font-bold">Total:</span>
           </label>
-          <div class="text-lg">$120.00</div>
+          <div class="text-lg">{{ order.total | currency }}</div>
         </div>
       </div>
     </div>
@@ -39,31 +39,30 @@
       <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
         <div>
           <div class="font-semibold">Full Name:</div>
-          <div>fullName</div>
+          <div>{{ order.fullName }}</div>
         </div>
         <div>
           <div class="font-semibold">Email:</div>
-          <div>email</div>
+          <div>{{ order.email }}</div>
         </div>
         <div>
           <div class="font-semibold">Phone:</div>
-          <div>phone</div>
+          <div>{{ order.phone }}</div>
         </div>
         <div>
           <div class="font-semibold">Shipping Address:</div>
-          <div>address</div>
+          <div>{{ order.address }}</div>
         </div>
         <div>
           <div class="font-semibold">City:</div>
-          <div>city</div>
+          <div>{{ order.city }}</div>
         </div>
         <div>
           <div class="font-semibold">Postal Code:</div>
-          <div>postalCode</div>
+          <div>{{ order.postalCode }}</div>
         </div>
       </div>
     </div>
-
     <!-- Product List -->
     <div class="rounded-lg p-6">
       <div class="text-2xl font-bold mb-4">Products</div>
@@ -78,8 +77,9 @@
               <th>Total</th>
             </tr>
           </thead>
+          @if(order.orderItems){
           <tbody>
-            <!-- Product 1 -->
+            @for(product of order.orderItems.$values;track product){
             <tr>
               <td>
                 <div class="flex items-center gap-3">
@@ -92,40 +92,24 @@
                     </div>
                   </div>
                   <div>
-                    <div class="font-bold">Nike Carboon</div>
-                    <div class="text-sm opacity-50">Shoes</div>
-                  </div>
-                </div>
-              </td>
-              <td>Zemlak, Daniel and Leannon Desktop Support Technician</td>
-              <td>$210</td>
-              <td>1</td>
-              <td>$210</td>
-            </tr>
-            <!-- Product 2 -->
-            <tr>
-              <td>
-                <div class="flex items-center gap-3">
-                  <div class="avatar">
-                    <div class="mask mask-squircle w-12 h-12">
-                      <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
-                        alt="Product Image"
-                      />
+                    <div class="font-bold">{{ product.product.name }}</div>
+                    <div class="text-sm opacity-50">
+                      {{ product.product.category }}
                     </div>
                   </div>
-                  <div>
-                    <div class="font-bold">Adidas Runner</div>
-                    <div class="text-sm opacity-50">Shoes</div>
-                  </div>
                 </div>
               </td>
-              <td>Professional shoes for running</td>
-              <td>$150</td>
-              <td>2</td>
-              <td>$300</td>
+
+              <td>{{ product.product.description }}</td>
+              <td>{{ product.product.price | currency }}</td>
+              <td>{{ product.quantity }}</td>
+              <td>
+                {{ product.product.price * product.quantity | currency }}
+              </td>
             </tr>
+            }
           </tbody>
+          }
         </table>
       </div>
     </div>
@@ -136,19 +120,19 @@
       <div class="text-2xl mb-4 font-bold">Order Summary</div>
       <div class="flex justify-between mb-2">
         <div>Subtotal</div>
-        <div class="font-bold">$510.00</div>
+        <div class="font-bold">$0.00</div>
       </div>
       <div class="flex justify-between mb-2">
         <div>Shipping</div>
-        <div class="font-bold">$10.00</div>
+        <div class="font-bold">$0.00</div>
       </div>
       <div class="flex justify-between mb-2">
         <div>Discount</div>
-        <div class="font-bold">-$50.00</div>
+        <div class="font-bold">-$0.00</div>
       </div>
       <div class="flex justify-between mb-2">
         <div class="font-bold text-lg">Total</div>
-        <div class="font-bold text-lg">$470.00</div>
+        <div class="font-bold">{{ total }}</div>
       </div>
       <button class="btn btn-primary mt-4 w-full" type="button">
         Download Invoice
