fix(marketplace ) : returned data handling the fix $value BUG

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -2,27 +2,20 @@
   <div class="mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
-        <div class="flex gap-2 items-center">
+        <a
+          href="#"
+          class="hover:text-primary px-3 py-2 rounded-md text-sm font-medium flex gap-2 items-center"
+        >
           <img class="h-6 w-auto" src="../../../assets/X-line.png" />
           <span class="text-2xl">Glide</span>
-        </div>
+        </a>
         <div class="hidden md:block">
           <div class="ml-10 flex items-baseline space-x-4">
             <a
-              href="#"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              routerLinkActive
-              >Home</a
-            >
-            <a
               href="/marketplace"
               class="dark:hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
+              routerLinkActive
               >MarketPlace</a
-            >
-            <a
-              href="/profile"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              >Dashboard</a
             >
             <a
               href="/product"
@@ -30,14 +23,9 @@
               >About</a
             >
             <a
-              href="/order"
+              href="/"
               class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
               >Services</a
-            >
-            <a
-              href="/orderDetails"
-              class="hover:bg-gray-700 px-3 py-2 rounded-md text-sm font-medium"
-              >orderDetails</a
             >
             <a
               href="/dashboard"
